Fix button text on join team overflowing

--- a/src/components/ServerDetailsPage.scss
+++ b/src/components/ServerDetailsPage.scss
@@ -117,6 +117,7 @@
 
     .btn{
       margin: 2px;
+      padding: 0 4px;
       flex: 1;
     }
   }
